Update padding for the home empty state to ensure symmetrical spacing

--- a/apps/editor/src/views/panel/frontend/Home/Home.module.scss
+++ b/apps/editor/src/views/panel/frontend/Home/Home.module.scss
@@ -98,8 +98,7 @@
   }
 
   &__empty {
-    padding-left: 34px;
-    padding-right: 12px;
+    padding: 0 12px;
     color: var(--cwc-text-color-dimmed);
   }
 
